---
source: tests/parse.rs
expression: m
---
Manifest {
    package: Some(
        Package {
            name: "metadata",
            edition: None,
            version: Local(
                "0.1.0",
            ),
            build: Some(
                String(
                    "foobar.rs",
                ),
            ),
            workspace: None,
            authors: None,
            links: None,
            description: None,
            homepage: None,
            documentation: None,
            readme: None,
            keywords: None,
            categories: None,
            license: None,
            license_file: None,
            repository: None,
            metadata: None,
            rust_version: None,
            exclude: None,
            include: None,
            default_run: None,
            autobins: true,
            autoexamples: true,
            autotests: true,
            autobenches: true,
            publish: None,
            resolver: None,
        },
    ),
    cargo_features: None,
    workspace: None,
    dependencies: None,
    dev_dependencies: None,
    build_dependencies: None,
    target: None,
    features: None,
    bin: Some(
        [],
    ),
    bench: Some(
        [],
    ),
    test: Some(
        [],
    ),
    example: Some(
        [],
    ),
    patch: None,
    lib: Some(
        Product {
            path: Some(
                "lib.rs",
            ),
            name: None,
            test: true,
            doctest: true,
            bench: true,
            doc: true,
            plugin: false,
            proc_macro: false,
            harness: true,
            edition: None,
            required_features: [],
            crate_type: None,
        },
    ),
    profile: None,
    badges: None,
}
